using relative paths for resources to work on phones; fixed collapse jumping issue

--- a/app/sass/nav-drawer.scss
+++ b/app/sass/nav-drawer.scss
@@ -19,7 +19,7 @@
       width: 32px;
       height: 32px;
       margin-right: 5px;
-      background: url("/images/givit-logo-32x32.png");
+      background: url("../images/givit-logo-32x32.png");
     }
 
     .navbar-brand{
