--- a/app/sass/variables.scss
+++ b/app/sass/variables.scss
@@ -1,6 +1,6 @@
 $border-radius-base: 0;
 $body-bg: #EEE;
-$icon-font-path: "/bower_components/sass-bootstrap/fonts/";
+$icon-font-path: "../bower_components/sass-bootstrap/fonts/";
 $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-base: $font-family-sans-serif;
 $brand-primary: #729BC7;
